# diff-shades

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
diff_shades/: __init__.py  __main__.py  analysis.py  cli.py  config.py  output.py
src/diff_shades/: __init__.py  __main__.py  _diff.py  analysis.py  cli.py  config.py  output.py  results.py  utils.py
tests/: failing-2.json  test_suite.py
tests/data/: basic.analysis.json  diff-shades-default.analysis.json  failed.py  failing-2.json  failing.json  invalid-data-format.analysis.json  nothing-changed.py  reformatted.py
tests/data/data-formats/: 1.3.json
