[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diff-shades"
authors = [
    {name = "Richard Si", email = "63936253+ichard26@users.noreply.github.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
license = {file = "LICENSE.txt"}
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
    "click >= 8.0.0",
    "packaging >= 21.0",
    "platformdirs >= 2.4.0",
    "rich >= 10.13.0",
    "typing-extensions >= 3.7.4; python_version < '3.8'",
]

dynamic = ["version", "description"]

[project.scripts]
diff-shades = "diff_shades.cli:main"

[project.urls]
Repository = "https://github.com/ichard26/diff-shades"

[tool.flit.module]
name = "diff_shades"

[tool.black]
line-length = 95
target-version = ["py37", "py38", "py39"]

[tool.isort]
profile = "black"
line_length = 95
skip_gitignore = true
py_version = "37"
known_third_party = ["click", "packaging", "rich", "black", "nox", "platformdirs"]
known_first_party = ["diff_shades"]
